recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:20: error: not found: value snowSide
		snowSide(levels-1,length/3)
                ^SquareKoch:22: error: not found: value snowSide
		snowSide(levels-1,length/3)
                ^SquareKoch:24: error: not found: value snowSide
		snowSide(levels-1,length/3)
                ^SquareKoch:26: error: not found: value snowSide
		snowSide(levels-1,length/3)
                ^